--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Main Page
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>
+    Portfolio(jp)
+  </title>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+
+  <link rel="stylesheet" href="all.css">
+</head>
+
+<body>
+  <nav class="navigation">
+    <section class="container">
+      <a class="navigation-title" href="">Portfolio</a>
+      <ul class="navigation-list float-right">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#experience">Experience</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#products">Products</a>
+        </li>
+      </ul>
+    </section>
+  </nav>
+
+  <!-- Profile -->
+  <section class="container x-first-container" id="profile">
+    <h3>Profile</h3>
+    ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。ここにプロフィールを書きます。
+  </section>
+
+  <!-- Experience -->
+  <section class="container" id="experience">
+    <h3>Experience</h3>
+    ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。ここに言語の経験を書きます。
+  </section>
+
+  <!-- Experience -->
+  <section class="container" id="products">
+    <h3>Products</h3>
+    ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。ここに作ったプロダクト(withリンクor画像)の一覧を書きます。
+  </section>
+</body>
+
+</html>
